--- a/index.html
+++ b/index.html
@@ -1910,7 +1910,7 @@
           };
          
           // Submit to the form endpoint
-          fetch('https://submit-form.com/HxATtCXSN', {
+          fetch('https://submit-form.com/Ms8Kw5un4', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
@@ -1967,7 +1967,7 @@
           };
          
           // Submit to the form endpoint
-          fetch('https://submit-form.com/HxATtCXSN', {
+          fetch('https://submit-form.com/Lac2NXJWI', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
